trunk/Universal Containers - ORG/src/AppExchange Laboratory Recruiting App Components/objects/Candidate__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Employer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Employed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>GED/HS Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA/BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA/MS/MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PhD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Doc</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Candidate_Number__c</fullName>
        <externalId>true</externalId>
        <indexed>true</indexed>
        <label>Legacy Candidate Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Citizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <formula>LOWER(Last_Name__c &amp; Email__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visa Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>